--- a/ codehtml/admin.html
+++ b/ codehtml/admin.html
@@ -15,7 +15,7 @@
     <!-- bootstrap -->
 </head>
 
-<body style="background-image:url(technology-background-1632715.jpg);">
+<body  style="background-image:url(/images/technology-background-1632715.jpg);">
     <style>
         body {
             min-height: 100vh;
@@ -87,7 +87,7 @@
 
     <div class="card-deck container mb-5" style="margin-top:10vh;">
         <div class="card">
-          <img src="1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
+          <img src="/images/1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -95,7 +95,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
+          <img src="/images/1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
+          <img src="/images/1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -118,7 +118,7 @@
 
   <div class="card-deck container mb-5">
     <div class="card">
-      <img src="1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
+      <img src="/images/1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -126,7 +126,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
+      <img src="/images/1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -134,7 +134,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
+      <img src="/images/1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -173,16 +173,16 @@
 
                     <ul class="list-unstyled">
                         <li>
-                            <a style="color:white;" href="#!">home</a>
+                            <a style="color:white;" href="/%20codehtml/index.html">home</a>
                         </li>
                         <li>
-                            <a style="color:white;" href="#!">login</a>
+                            <a style="color:white;" href="/%20codehtml/login.html">login</a>
                         </li>
                         <li>
-                            <a style="color:white;" href="#!">gallerie</a>
+                            <a style="color:white;" href="/%20codehtml/news.html">gallerie</a>
                         </li>
                         <li>
-                            <a style="color:white;" href="#!">articles</a>
+                            <a style="color:white;" href="/%20codehtml/article-id.html">articles</a>
                         </li>
                     </ul>
 
@@ -197,7 +197,7 @@
 
                     <ul class="list-unstyled">
                         <li>
-                            <a style="color:white;" href="#!">www.peinturequality.com</a>
+                            <a style="color:white;" href="#">www.peinturequality.com</a>
                         </li>
                         <li>
                             <a style="color:white;" href="#!">www.pinceaux-raoul.fr</a>
