--- a/ codehtml/article-id.html
+++ b/ codehtml/article-id.html
@@ -18,7 +18,7 @@
 </head>
 <!-- *********************************************************** -->
 
-<body style="background-image:url(bgchiant.jpg);">
+<body style="background-image:url(/images/bgchiant.jpg);">
   <style>
     body {
         min-height: 100vh;
@@ -42,10 +42,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/%20codehtml/index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contacts</a>
+          <a class="nav-link" href="/%20codehtml/contact.html">Contacts</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -53,12 +53,12 @@
             Dropdown
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">login</a>
-            <a class="dropdown-item" href="#">Inscription</a>
-            <a class="dropdown-item" href="#">Mes Réalisations</a>
+            <a class="dropdown-item" href="/%20codehtml/login.html">login</a>
+            <a class="dropdown-item" href="/%20codehtml/login.html#formreg">Inscription</a>
+            <a class="dropdown-item" href="/%20codehtml/news.html">Mes Réalisations</a>
 
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Laissez votre message ici</a>
+            <a class="dropdown-item" href="/%20codehtml/contact.html">Laissez votre message ici</a>
           </div>
         </li>
         <li class="nav-item">
@@ -74,7 +74,42 @@
   <!-- navbar! -->
 
 <!-- ************************************************************************* -->
+<!-- article 1 -->
 
+<div class="card mb-4 container">
+  <div class="card-header">
+    <img src="/images/1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" alt="">
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Ce nouvel artiste francais !</h5>
+    <p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+    <a href="/%20codehtml/news.html" class="btn btn-primary">aller a l'article</a>
+  </div>
+</div>
+<!-- ************************************************************************* -->
+<!-- article 2 -->
+<div class="card mb-4 container">
+  <div class="card-header">
+    <img src="/images/1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" alt="">
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">On aime le graph</h5>
+    <p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+    <a href="/%20codehtml/news.html" class="btn btn-primary">aller a l'article</a>
+  </div>
+</div>
+<!-- ************************************************************************* -->
+<!-- article 3 -->
+<div class="card mb-4 container">
+  <div class="card-header">
+    <img src="/images/1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" alt="">
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">dessin au fusin</h5>
+    <p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+    <a href="/%20codehtml/news.html" class="btn btn-primary">aller a l'article</a>
+  </div>
+</div>
 <!-- ************************************************************************* -->
 <!-- Footer -->
 <footer class="page-footer font-small bg-primary pt-4">
@@ -107,16 +142,16 @@
 
                 <ul class="list-unstyled">
                     <li>
-                        <a style="color:white;" href="#!">home</a>
+                        <a style="color:white;" href="/%20codehtml/index.html">home</a>
                     </li>
                     <li>
-                        <a style="color:white;" href="#!">login</a>
+                        <a style="color:white;" href="/%20codehtml/login.html">login</a>
                     </li>
                     <li>
-                        <a style="color:white;" href="#!">gallerie</a>
+                        <a style="color:white;" href="/%20codehtml/news.html">gallerie</a>
                     </li>
                     <li>
-                        <a style="color:white;" href="#!">articles</a>
+                        <a style="color:white;" href="/%20codehtml/article-id.html">articles</a>
                     </li>
                 </ul>
 
