--- a/ codehtml/index.html
+++ b/ codehtml/index.html
@@ -15,7 +15,7 @@
     <!-- bootstrap -->
 </head>
 
-<body style="background-image:url(bgchiant.jpg);">
+<body style="background-image:url(/images/bgchiant.jpg);">
   <style>
     body {
         min-height: 100vh;
@@ -36,10 +36,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/%20codehtml/index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contacts</a>
+          <a class="nav-link" href="/%20codehtml/contact.html">Contacts</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -47,12 +47,12 @@
             Dropdown
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">login</a>
-            <a class="dropdown-item" href="#">Inscription</a>
-            <a class="dropdown-item" href="#">Mes Réalisations</a>
+            <a class="dropdown-item" href="/%20codehtml/login.html">login</a>
+            <a class="dropdown-item" href="/%20codehtml/login.html#formreg">Inscription</a>
+            <a class="dropdown-item" href="/%20codehtml/news.html">Mes Réalisations</a>
             
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Laissez votre message ici</a>
+            <a class="dropdown-item" href="/%20codehtml/contact.html">Laissez votre message ici</a>
           </div>
         </li>
         <li class="nav-item">
@@ -71,13 +71,13 @@
   <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel"style="margin-top: 8vh !important;">
     <div class="carousel-inner">
       <div class="carousel-item active h-90" data-interval="5000">
-        <img src="gettyimages-157594162-2048x2048.jpg" style="height: 90vh;" class="d-block img-fluid w-100 " alt="...">
+        <img src="/images/gettyimages-157594162-2048x2048.jpg" style="height: 90vh;" class="d-block img-fluid w-100 " alt="...">
       </div>
       <div class="carousel-item h-90" data-interval="5000">
-        <img src="gettyimages-674982405-2048x2048.jpg" style="height: 90vh;" class="d-block img-fluid w-100" alt="...">
+        <img src="/images/gettyimages-674982405-2048x2048.jpg" style="height: 90vh;" class="d-block img-fluid w-100" alt="...">
       </div>
       <div class="carousel-item h-90" data-interval="5000">
-        <img src="gettyimages-910585746-2048x2048.jpg" style="height: 90vh;" class="d-block img-fluid w-100" alt="...">
+        <img src="/images/gettyimages-910585746-2048x2048.jpg" style="height: 90vh;" class="d-block img-fluid w-100" alt="...">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
@@ -96,7 +96,7 @@
     <div class="row row-cols-1 row-cols-md-2 mt-">
       <div class="col mb-4">
         <div class="card p-3 mb-2 bg-primary text-white">
-          <img src="1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top h-25 w-25" alt="...">
+          <img src="/images/1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top h-25 w-25" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
@@ -106,7 +106,7 @@
       </div>
       <div class="col mb-4">
         <div class="card p-3 mb-2 bg-primary text-white">
-          <img src="1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top h-25 w-25" alt="...">
+          <img src="/images/1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top h-25 w-25" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
@@ -116,7 +116,7 @@
       </div>
       <div class="col mb-4">
         <div class="card p-3 mb-2 bg-primary text-white">
-          <img src="1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top h-25 w-25" alt="...">
+          <img src="/images/1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top h-25 w-25" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
@@ -126,7 +126,7 @@
       </div>
       <div class="col mb-4">
         <div class="card p-3 mb-2 bg-primary text-white">
-          <img src="1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top h-25 w-25" alt="...">
+          <img src="/images/1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top h-25 w-25" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
@@ -141,7 +141,7 @@
   <!-- banniere -->
 
   <div class="mb-4 w-100" style="height: 10vh;">
-    <img class=" w-100" style="height: 10vh ;" src="Galerie-dart-virtuelle-gratuite-Exposer-ses-œuvres-en-ligne.jpg"
+    <img class=" w-100" style="height: 10vh ;" src="/images/Galerie-dart-virtuelle-gratuite-Exposer-ses-œuvres-en-ligne.jpg"
       alt="">
   </div>
   <!-- banniere -->
@@ -187,16 +187,16 @@
 
         <ul class="list-unstyled">
           <li>
-            <a style="color:white;" href="#!">home</a>
+            <a style="color:white;" href="/%20codehtml/index.html">home</a>
           </li>
           <li>
-            <a style="color:white;" href="#!">login</a>
+            <a style="color:white;" href="/%20codehtml/login.html">login</a>
           </li>
           <li>
-            <a style="color:white;" href="#!">gallerie</a>
+            <a style="color:white;" href="/%20codehtml/news.html">gallerie</a>
           </li>
           <li>
-            <a style="color:white;" href="#!">articles</a>
+            <a style="color:white;" href="/%20codehtml/article-id.html">articles</a>
           </li>
         </ul>
 
