--- a/ codehtml/login.html
+++ b/ codehtml/login.html
@@ -15,7 +15,7 @@
     <!-- bootstrap -->
 </head>
 
-<body style="background-image:url(bgchiant.jpg);">
+<body style="background-image:url(/images/bgchiant.jpg);">
     <style>
         body {
             min-height: 100vh;
@@ -36,10 +36,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/%20codehtml/index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contacts</a>
+                    <a class="nav-link" href="/%20codehtml/contact.html">Contacts</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -47,12 +47,12 @@
                         Dropdown
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">login</a>
-                        <a class="dropdown-item" href="#">Inscription</a>
-                        <a class="dropdown-item" href="#">Mes Réalisations</a>
+                        <a class="dropdown-item" href="/%20codehtml/login.html">login</a>
+                        <a class="dropdown-item" href="/%20codehtml/login.html#formreg">Inscription</a>
+                        <a class="dropdown-item" href="/%20codehtml/news.html">Mes Réalisations</a>
 
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Laissez votre message ici</a>
+                        <a class="dropdown-item" href="/%20codehtml/contact.html">Laissez votre message ici</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -91,25 +91,27 @@
             </div>
             <div>
                 <!-- Forgot password -->
-                <a href="">Forgot password?</a>
+                <a class="text-white" href="/%20codehtml/contact.html">Forgot password?</a>
             </div>
         </div>
 
         <!-- Sign in button -->
-        <button class="btn btn-info btn-block my-4 btn-dark" type="submit">Sign in</button>
+        <a class="btn btn  my-4 btn-dark" href="/%20codehtml/admin.html">
+            sing-in
+        </a>
 
         <!-- Register -->
         <p>Not a member?
-            <a href="" style="color: white;" >Register</a>
+            <a href="#formreg" style="color: white;">Register</a>
         </p>
 
         <!-- Social login -->
         <p>or sign in with:</p>
 
-        <a href="#" class="mx-2 bg-dark" role="button"><i class="fab fa-facebook-f light-blue-text"></i></a>
-        <a href="#" class="mx-2 bg-dark " role="button"><i class="fab fa-twitter light-blue-text"></i></a>
-        <a href="#" class="mx-2 bg-dark " role="button"><i class="fab fa-linkedin-in light-blue-text"></i></a>
-        <a href="#" class="mx-2 bg-dark " role="button"><i class="fab fa-github light-blue-text"></i></a>
+        <a href="https://www.facebook.com" class="mx-2 bg-dark" role="button"><i class="fab fa-facebook-f light-blue-text"></i></a>
+        <a href="https://www.twitter.com" class="mx-2 bg-dark " role="button"><i class="fab fa-twitter light-blue-text"></i></a>
+        <a href="https://www.instagram.com" class="mx-2 bg-dark " role="button"><i class="fab fa-linkedin-in light-blue-text"></i></a>
+        <a href="https://www.github.com" class="mx-2 bg-dark " role="button"><i class="fab fa-github light-blue-text"></i></a>
 
     </form>
     <!-- Default form login -->
@@ -118,7 +120,7 @@
 
     <!-- registrer -->
     <!-- Default form register -->
-    <form class="container text-center border border-light p-5 bg-primary mt-4" action="#!">
+    <form id="formreg" class="container text-center border border-light p-5 bg-primary mt-4" action="#!">
 
         <p class="h4 mb-4">Sign up</p>
 
@@ -162,10 +164,10 @@
         <!-- Social register -->
         <p>or sign up with:</p>
 
-        <a href="#" class="mx-2" role="button"><i class="bg-dark fab fa-facebook-f light-blue-text"></i></a>
-        <a href="#" class="mx-2" role="button"><i class="bg-dark fab fa-twitter light-blue-text"></i></a>
-        <a href="#" class="mx-2" role="button"><i class="bg-dark fab fa-linkedin-in light-blue-text"></i></a>
-        <a href="#" class="mx-2" role="button"><i class=" bg-dark fab fa-github light-blue-text"></i></a>
+        <a href="https://www.facebook.com" class="mx-2" role="button"><i class="bg-dark fab fa-facebook-f light-blue-text"></i></a>
+        <a href="https://www.twitter.com" class="mx-2" role="button"><i class="bg-dark fab fa-twitter light-blue-text"></i></a>
+        <a href="https://www.instagram.com" class="mx-2" role="button"><i class="bg-dark fab fa-linkedin-in light-blue-text"></i></a>
+        <a href="https://www.github.com" class="mx-2" role="button"><i class=" bg-dark fab fa-github light-blue-text"></i></a>
 
         <hr>
 
@@ -210,16 +212,16 @@
 
                     <ul class="list-unstyled">
                         <li>
-                            <a style="color:white;" href="#!">home</a>
+                            <a style="color:white;" href="/%20codehtml/index.html">home</a>
                         </li>
                         <li>
-                            <a style="color:white;" href="#!">login</a>
+                            <a style="color:white;" href="/%20codehtml/login.html">login</a>
                         </li>
                         <li>
-                            <a style="color:white;" href="#!">gallerie</a>
+                            <a style="color:white;" href="/%20codehtml/news.html">gallerie</a>
                         </li>
                         <li>
-                            <a style="color:white;" href="#!">articles</a>
+                            <a style="color:white;" href="/%20codehtml/article-id.html">articles</a>
                         </li>
                     </ul>
 
