--- a/ codehtml/news.html
+++ b/ codehtml/news.html
@@ -15,7 +15,7 @@
     <!-- bootstrap -->
 </head>
 
-<body style="background-image:url(bgchiant.jpg);">
+<body style="background-image: url(/images/bgchiant.jpg);">
     <style>
         body {
             min-height: 100vh;
@@ -36,10 +36,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/%20codehtml/index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contacts</a>
+                    <a class="nav-link" href="/%20codehtml/contact.html">Contacts</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -47,12 +47,12 @@
                         Dropdown
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">login</a>
-                        <a class="dropdown-item" href="#">Inscription</a>
-                        <a class="dropdown-item" href="#">Mes Réalisations</a>
+                        <a class="dropdown-item" href="/%20codehtml/login.html">login</a>
+                        <a class="dropdown-item" href="/%20codehtml/login.html#formreg">Inscription</a>
+                        <a class="dropdown-item" href="/%20codehtml/news.html">Mes Réalisations</a>
 
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Laissez votre message ici</a>
+                        <a class="dropdown-item" href="/%20codehtml/contact.html">Laissez votre message ici</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -73,7 +73,7 @@
 
     <div class="card-group mb-5 container" style="margin-top: 8vh;">
         <div class="card">
-            <img src="1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
+            <img src="/images/1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
@@ -82,7 +82,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
+            <img src="/images/1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -90,7 +90,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
+            <img src="/images/1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
@@ -102,7 +102,7 @@
 
     <div class="card-group mb-5 container">
         <div class="card">
-            <img src="1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
+            <img src="/images/1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
@@ -111,7 +111,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
+            <img src="/images/1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -119,7 +119,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
+            <img src="/images/1_qSXlg1J3GEqXJ7qBzfgm0A.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
@@ -163,16 +163,16 @@
 
                     <ul class="list-unstyled">
                         <li>
-                            <a style="color:white;" href="#!">home</a>
+                            <a style="color:white;" href="/%20codehtml/index.html">home</a>
                         </li>
                         <li>
-                            <a style="color:white;" href="#!">login</a>
+                            <a style="color:white;" href="/%20codehtml/login.html">login</a>
                         </li>
                         <li>
-                            <a style="color:white;" href="#!">gallerie</a>
+                            <a style="color:white;" href="/%20codehtml/news.html">gallerie</a>
                         </li>
                         <li>
-                            <a style="color:white;" href="#!">articles</a>
+                            <a style="color:white;" href="/%20codehtml/article-id.html">articles</a>
                         </li>
                     </ul>
 
