--- a/ codehtml/contact.html
+++ b/ codehtml/contact.html
@@ -15,8 +15,8 @@
   <!-- bootstrap -->
 </head>
 
-<body style="background-image:url(bgchiant.jpg);">
-  <style>
+<body style="background-image:url(/images/bgchiant.jpg);">
+  <!-- <style>
     body {
         min-height: 100vh;
         margin: auto;
@@ -24,7 +24,7 @@
         flex-flow: column nowrap;
         justify-content: space-between
     }
-  </style>
+  </style> -->
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-light p-3 mb-2 bg-primary text-white">
     <a class="navbar-brand" href="#">Menu</a>
@@ -36,10 +36,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/%20codehtml/index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contacts</a>
+          <a class="nav-link" href="/%20codehtml/contact.html">Contacts</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -47,12 +47,12 @@
             Dropdown
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">login</a>
-            <a class="dropdown-item" href="#">Inscription</a>
-            <a class="dropdown-item" href="#">Mes Réalisations</a>
+            <a class="dropdown-item" href="/%20codehtml/login.html">login</a>
+            <a class="dropdown-item" href="/%20codehtml/login.html#formreg">Inscription</a>
+            <a class="dropdown-item" href="/%20codehtml/news.html">Mes Réalisations</a>
 
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Laissez votre message ici</a>
+            <a class="dropdown-item" href="/%20codehtml/contact.html">Laissez votre message ici</a>
           </div>
         </li>
         <li class="nav-item">
@@ -250,16 +250,16 @@
 
           <ul class="list-unstyled">
             <li>
-              <a style="color:white;" href="#!">home</a>
+              <a style="color:white;" href="/%20codehtml/index.html">home</a>
             </li>
             <li>
-              <a style="color:white;" href="#!">login</a>
+              <a style="color:white;" href="/%20codehtml/login.html">login</a>
             </li>
             <li>
-              <a style="color:white;" href="#!">gallerie</a>
+              <a style="color:white;" href="/%20codehtml/news.html">gallerie</a>
             </li>
             <li>
-              <a style="color:white;" href="#!">articles</a>
+              <a style="color:white;" href="/%20codehtml/article-id.html">articles</a>
             </li>
           </ul>
 
